# python-ai-learning

./: .gitignore  CLAUDE.md  GITHUB_README.md  LEARNING_PATH.md  customer_service_memory.json  day01_conversation_bot.py  day01学习笔记.md  day02_todo_manager.py  day02学习笔记.md  day03_weather_checker.py  day03学习笔记.md  day04_data_analyzer.py  day04学习笔记.md  day05_web_scraper.py  day05学习笔记.md  day06_library_system.py  day06学习笔记.md  day07_finance_tracker.py  day07学习笔记.md  day08_openai_chat.py  day08学习笔记.md  day09_prompt_engineering.py  day09学习笔记.md  day10_rag_system.py  day10学习笔记.md  day11_langchain_basics.py  day11学习笔记.md  day12_ai_agent.py  day12_memory_system.py  day12学习笔记.md  day13_tool_use.py  day13学习笔记.md  day14_intelligent_customer_service.py  day14学习笔记.md  day15_react_agent.py  day15学习笔记.md  day16_multi_agent.py  day16学习笔记.md  day17_web_scraper_agent.py  day17学习笔记.md  (+20 more)
day22_knowledge_base/: .env.example  README.md  pyproject.toml
day22_knowledge_base/frontend/: main.py
day22_knowledge_base/frontend/components/: sidebar.py
day22_knowledge_base/frontend/pages/: 1_Upload.py  2_Search.py  3_Documents.py
day22_knowledge_base/src/knowledge_base/: __init__.py  main.py
day22_knowledge_base/src/knowledge_base/core/: background_tasks.py  config.py  exceptions.py  middleware.py
day22_knowledge_base/src/knowledge_base/db/: database.py
day22_knowledge_base/tests/: conftest.py
day22_knowledge_base/tests/integration/: test_api.py  test_api_extended.py
day22_knowledge_base/tests/unit/: test_document_service_more.py  test_exceptions.py  test_search_service.py  test_services.py  test_text_splitter.py
day25_ai_content_platform/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
day25_ai_content_platform/frontend/: main.py
day25_ai_content_platform/frontend/components/: task_card.py
day25_ai_content_platform/frontend/pages/: 1_Content_Creation.py  2_Task_Management.py  3_System_Status.py
day25_ai_content_platform/src/content_platform/: __init__.py  main.py
day25_ai_content_platform/tests/: conftest.py
day25_ai_content_platform/tests/integration/: test_content_api.py  test_health_api.py  test_tasks_api.py
day25_ai_content_platform/tests/unit/: test_content_service.py  test_exceptions.py  test_task_queue.py
myp/: day02.py
(+25 files in other folders)
