[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "knowledge-base"
version = "0.1.0"
description = "Day 22: 智能知识库系统 - 企业级项目实战"
requires-python = ">=3.11"
readme = "README.md"
authors = [
    {name = "duquanyong"}
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "openai>=1.35",
    "numpy>=1.26",
    "python-dotenv>=1.0",
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "streamlit>=1.39",
    "pandas>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
asyncio_mode = "auto"
